...
    <string name="prefHeaderDetection">Detection</string>
    <string name="prefColorSpace">Color space</string>
    <string name="prefColorSpaceDefault">gray</string>
    <string name="prefProcRes">Processing resolution</string>
    <string name="prefProcResDefault">600</string>
    <string name="prefHeaderVelocity">Velocity estimation</string>
    <string name="prefHeaderDebug">Developer Options</string>

    <!-- Game settings -->
    <string name="prefHeaderGame">Game</string>
    <string name="prefPlayer1Name">Name of left Player</string>
    <string name="prefPlayer1NameDefault">Hans</string>
    <string name="prefPlayer1Key">player_1</string>
    <string name="prefPlayer2Name">Name of right Player</string>
    <string name="prefPlayer2NameDefault">Peter</string>
    <string name="prefPlayer2Key">player_2</string>
    <string name="prefDisplayDebug">Display debug info</string>
    <string name="prefDisplayDebugKey">display_debug</string>
    <string name="prefDisplayDebugDefault">false</string>
    <string name="prefDisplayDebugSummary">Shows debug information on the tracking device\'s display</string>
    <string name="prefRecord">Record matches</string>
    <string name="prefRecordKey">record_matches</string>
    <string name="prefRecordDefault">false</string>
    <string name="prefUseBlackSideDefault">false</string>
    <string name="prefUseBlackSideKey">use_red_side</string>
    <string name="prefUseBlackSideTitle">Use only red side of racket for serving</string>
    <string name="prefUseBlackSideSummary">Allows the use of only the red side of the racket to signal that a player is ready for serve</string>
    <string name="prefUseAudioDefault">true</string>
    <string name="prefUseAudioKey">use_audio</string>
    <string name="prefUseAudioSummary">Allows the use of audio of the tracker device to assist ball detection</string>
    <string name="prefUseAudioTitle">Use Audio</string>

    <!-- Detection settings -->
    <string name="prefVelocityEstimationMode">Velocity estimation mode</string>
    <string name="prefVelocityEstimationModeDefault">pxfr</string>
    <string name="prefObjectDiameterPicker">Object size based on sport</string>
    <string name="prefObjectDiameterCustom">Custom object diameter [m]</string>
    <string name="prefObjectDiameterCustomDefault">1.00</string>
    <string name="prefFrameRate">Precise frame rate [Hz]</string>
    <string name="prefFrameRateDefault">30.00</string>
    <string name="prefHeaderTracker">Tracking Settings</string>
    <string name="runBenchmark">Run benchmark</string>

    <!-- Velocity estimation settings -->
    <string name="runVideoPlayer">Run a replay</string>
    <string name="prefDisableDetection">Disable FMO detection</string>

    <!-- Advanced settings -->
    <string name="prefPubnub">Connect with pubnub</string>
    <string name="prefPubnubDefault">false</string>
    <string name="prefPubnubKey">connect_pubnub</string>
    <string name="prefBenchmark">Benchmark</string>

    <string name="playerLeftDefaultName">Player 1</string>
    <string name="playerRightDefaultName">Player 2</string>
    <string name="gameScoreStart">0</string>
    <string name="gameScoreDivider">:</string>
    <string name="debugBallShotLabel">Ball shot from:</string>
...

    <!-- Scan Overlay -->
    <string name="scanText">Scan the QR code from the display</string>

    <!-- Quitting Match Messages -->
    <string name="quitMatchTitle">Quit match</string>
    <string name="quitMatchMessage">Are you sure you want to quit the ongoing match?\nYou will be sent back to the main screen.</string>
    <string name="quitMatchProceed">Quit Match</string>
    <string name="quitMatchCancel">Cancel</string>

    <!-- Connect Messages -->
    <string name="connectTitle">Accept connection with %1$s</string>
    <string name="connectMessage">Confirm the code matches on both devices:\n</string>
    <string name="disconnectTitle">Lost connection to other device</string>
    <string name="disconnectMessage">Please set up a new connection</string>
    <string name="connectConfirm">Confirm</string>
    <string name="connectReject">Reject</string>
    <string name="connectTrackerSearching">Setup the display device and wait for a connection…</string>
    <string name="connectDisplaySearching">Setup the tracker device and wait for a connection…</string>
    <string name="connectConnecting">Connecting with %1$s…</string>
    <string name="connectDisconnect">Lost connection with remote device. Try again!</string>
    <string name="connectRejection">The connection was rejected. Try again!</string>
    <string name="connectDiscoverFailure">Search failed. Try again!</string>
    <string name="connectPicture">Waiting for the display to take a picture…</string>

...
