<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="1"
        android:rowCount="5">

        <TextView
            android:id="@+id/initMTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/msTitle"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="5dp"
            android:text="@string/msType"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="18sp"
            android:textStyle="normal"/>

        <RelativeLayout
            android:layout_width="match_parent">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/match_type_bo1"
                    android:layout_width="32dp"
                    android:layout_margin="10dp"
                    android:layout_height="32dp"
                    android:src="@drawable/bo1_selected"
                    android:tint="@color/primary_light"/>
                <ImageView
                    android:id="@+id/match_type_bo3"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@id/match_type_bo1"
                    android:src="@drawable/bo3"
                    android:tint="@color/primary_light"/>
                <ImageView
                    android:id="@+id/match_type_bo5"
                    android:layout_width="32dp"
                    android:layout_margin="10dp"
                    android:layout_height="32dp"
                    android:layout_toEndOf="@id/match_type_bo3"
                    android:src="@drawable/bo5"
                    android:tint="@color/primary_light"/>
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingTop="12dp"
            android:paddingBottom="5dp"
            android:text="@string/msServer"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="18sp"
            android:textStyle="normal" />
        <RelativeLayout
            android:layout_width="match_parent">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/left_side_server_icon"
                    android:layout_width="64dp"
                    android:layout_height="90dp"
                    android:src="@drawable/player_server"
                    android:tint="@color/primary_light"/>
                <ImageView
                    android:id="@+id/table_icon"
                    android:layout_width="128dp"
                    android:layout_height="90dp"
                    android:layout_toEndOf="@id/left_side_server_icon"
                    android:src="@drawable/table"
                    android:tint="@color/primary_light"/>
                <ImageView
                    android:id="@+id/right_side_server_icon"
                    android:layout_width="64dp"
                    android:layout_height="90dp"
                    android:layout_toEndOf="@id/table_icon"
                    android:src="@drawable/player_not_server"
                    android:tint="@color/primary_light"/>
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/init_sideAndMatchTypeDoneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/radius_background"
            android:backgroundTint="@android:color/secondary_text_light"
            android:elevation="8dp"
            android:padding="8dp"
            android:paddingStart="72dp"
            android:paddingEnd="72dp"
            android:text="@string/msBtn"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="normal" />
    </GridLayout>
</RelativeLayout>