...
            android:text="@string/miSubTitle"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="18sp"
            android:textStyle="normal" />
        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_light"
            android:elevation="8dp"
            />
...
